in_progress/Tutorial-BaikalETK-new.ipynb: Fix a small syntax bug

--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -526,7 +526,64 @@
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Finished BSSN symbolic expressions in 2.1760144233703613 seconds.\n",
-      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n"
+      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=2) in 7.145589590072632 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.1061782836914062 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 32.98512840270996 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 22.48826575279236 seconds.\n",
+      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=2) in 0.05345916748046875 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.109914779663086 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=4) in 9.01694107055664 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 3.5318586826324463 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 41.19930863380432 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 22.04454231262207 seconds.\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.04961276054382324 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 1.297285556793213 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=4) in 8.848126411437988 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.7798547744750977 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 40.214874505996704 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 22.016468286514282 seconds.\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.0498197078704834 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 1.303328514099121 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=6) in 20.144201517105103 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.8595669269561768 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=6,Tmunu=False) in 64.49063968658447 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 22.78351354598999 seconds.\n",
+      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=6) in 0.049567222595214844 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 1.2450144290924072 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
+      "Finished Ricci C codegen (FD_order=8) in 80.76830053329468 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 3.291933059692383 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=8,Tmunu=False) in 180.806804895401 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 25.00747847557068 seconds.\n",
+      "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=8) in 0.04977703094482422 seconds.\n"
      ]
     }
    ],
@@ -572,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1236,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1867,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1893,17 +1950,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def output_make_code_defn(path):\n",
-    "    with open(os.path.join(path,\"make.code.defn\", \"w\") as file:\n",
+    "def output_make_code_defn(thornname):\n",
+    "    with open(os.path.join(thornname,\"src\",\"make.code.defn\"), \"w\") as file:\n",
     "        file.write(\"\"\"\n",
-    "    # Main make.code.defn file for thorn BaikalETK\n",
+    "# Main make.code.defn file for thorn \"\"\"+thornname+\"\"\"\n",
     "\n",
-    "    # Source files in this directory\n",
-    "    SRCS =\"\"\")\n",
+    "# Source files in this directory\n",
+    "SRCS =\"\"\")\n",
     "        filestring = \"\"\n",
     "        list_of_C_driver_files = list(Reg_Csrcdict.keys())\n",
     "        for i in range(len(list_of_C_driver_files)):\n",
@@ -1914,8 +1971,8 @@
     "                filestring += \"\\n\"\n",
     "        file.write(filestring)\n",
     "\n",
-    "output_make_code_defn(os.path.join(\"Baikal\",\"src\"))\n",
-    "output_make_code_defn(os.path.join(\"BaikalVacuum\",\"src\"))"
+    "output_make_code_defn(\"Baikal\")\n",
+    "output_make_code_defn(\"BaikalVacuum\")"
    ]
   },
   {
