Psi4-related notebooks & modules: Update Levi-Civita to latest (more correct) version

--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -233,7 +233,7 @@
     "        for j in range(DIM):\n",
     "            for k in range(DIM):\n",
     "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) / 2\n",
+    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
     "    return LeviCivitaSymbol\n",
     "\n",
     "# Step 2.h: Define v3U\n",
