Tutorial-BaikalETK-new.ipynb: Fix interface.ccl so both thorns can be compiled at once

--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -757,9 +757,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gri' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-8127cdf07f0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mauxevol_gfs_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maux_gfs_list\u001b[0m     \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgftype\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"EVOL\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mevol_gfs_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m   \u001b[0mgri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglb_gridfcs_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"GF\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gri' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# First construct lists of the basic gridfunctions used in NRPy+. \n",
     "#    Each type will be its own group in BaikalETK.\n",
@@ -799,7 +811,7 @@
     "# By \"inheriting\" other thorns, we tell the Toolkit that we \n",
     "#   will rely on variables/function that exist within those\n",
     "#   functions. \n",
-    "inherits:   ADMBase Boundary Grid MethodofLines\\n\"\"\")\n",
+    "inherits:   ADMBase Boundary Grid MethodofLines\\n\"\"\"\n",
     "    if add_stress_energy_source_terms == True:\n",
     "        outstr += \"inherits:   TmunuBase\\n\"\n",
     "    outstr += \"\"\"\n",
@@ -881,8 +893,8 @@
     "    outstr += output_list_of_gfs(auxevol_gfs_list,\"Auxiliary gridfunctions needed for evaluating the BSSN RHSs\")\n",
     "\n",
     "    with open(os.path.join(outrootdir,\"interface.ccl\"), \"w\") as file:\n",
-    "        file.write(outstr.replace(\"BaikalETK\",outrootdir)\n",
-    "    \n",
+    "        file.write(outstr.replace(\"BaikalETK\",outrootdir))\n",
+    "\n",
     "output_interface_ccl(add_stress_energy_source_terms=True)  # Outputs to Baikal\n",
     "output_interface_ccl(add_stress_energy_source_terms=False) # Outputs to BaikalVacuum"
    ]
