Just update a few print statements.

--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -1055,15 +1055,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  5.29  10.58 -15.87]\n",
-      "[0.01071014]\n"
+      "dHdx = 2.385080939821084e-03\n",
+      "dHdpy = 2.174994465196397e-01\n",
+      "dHdpz = -2.464369334936522e-06\n",
+      "r = 2.129680702671222e+01\n",
+      "ptheta = 9.019548611471071e-21\n",
+      "pphi = 4.973635747393160e+00\n",
+      "dHdr is -2.171536052104212e-11\n",
+      "dHdr term2 is 5.037361247078759e-04\n",
+      "dHdr term3 is -1.035050559550948e-29\n",
+      "d2Hdx2 = -2.304239976058610e-04\n"
      ]
     },
     {
@@ -1079,24 +1087,50 @@
    "source": [
     "# Import second derivatives of H from another function/routine\n",
     "if not os.path.isfile(\"SEOBNR_Playground_Pycodes/d2Hdx2.py\"):\n",
-    "    import SEOBNR.Hamiltonian_second_derivs_playground as Hsd\n",
+    "    print(\"I'M BEING BAD\")\n",
+    "#    import SEOBNR.Hamiltonian_second_derivs_playground as Hsd\n",
+    "#    Hsd.output_H_sec_derivs()\n",
+    "    import SEOBNR.Hamiltonian_second_derivs_x_playground as Hsd\n",
     "    Hsd.output_H_sec_derivs()\n",
     "from SEOBNR_Playground_Pycodes.d2Hdx2 import compute_d2Hdx2 # For testing\n",
     "\n",
-    "print(S1)\n",
+    "#d2Hdx2 = compute_d2Hdx2(m1, m2, eta, 2.129681018601393e+01, 0.0, 0.0,\n",
+    "#                        0.0, 2.335391115580442e-01, -4.235164736271502e-22,\n",
+    "#                        S1[0], S1[1], S1[2],\n",
+    "#                        S2[0], S2[1], S2[2], KK, k0, k1, dSO, dSS, 2, EMgamma)\n",
+    "#d2Hdx2 = compute_d2Hdx2(m1, m2, eta, 2.129681018601393e+01, 0.0, 0.0,\n",
+    "#                        0.0, 2.335391115580442e-01, -4.235164736271502e-22,\n",
+    "#                        S1hat[0], S1hat[1], S1hat[2],\n",
+    "#                        S2hat[0], S2hat[1], S2hat[2], KK, k0, k1, dSO, dSS, 0, EMgamma)\n",
+    "d2Hdx2 = compute_d2Hdx2(m1, m2, eta, 2.129680018601393e+01, 0.000000000000000e+00, 0.000000000000000e+00,\n",
+    "                        0.000000000000000e+00, 2.335392212172933e-01, -4.235166724910499e-22,\n",
+    "                        4.857667584940312e-03, 9.715161660389764e-03, -1.457311842632286e-02,\n",
+    "                        3.673094582185491e-03, -4.591302628615413e-03, 5.509696538546906e-03, KK, k0, k1, dSO, dSS, 1, EMgamma)\n",
+    "dHdx = new_compute_dHdx(m1, m2, eta, 2.129680018601393e+01, 0.000000000000000e+00, 0.000000000000000e+00,\n",
+    "                        0.000000000000000e+00, 2.335392212172933e-01, -4.235166724910499e-22,\n",
+    "                        4.857667584940312e-03, 9.715161660389764e-03, -1.457311842632286e-02,\n",
+    "                        3.673094582185491e-03, -4.591302628615413e-03, 5.509696538546906e-03, KK, k0, k1, dSO, dSS, 1, EMgamma)\n",
+    "dHdpy = new_compute_dHdp2(m1, m2, eta, 2.129680018601393e+01, 0.000000000000000e+00, 0.000000000000000e+00,\n",
+    "                        0.000000000000000e+00, 2.335392212172933e-01, -4.235166724910499e-22,\n",
+    "                        4.857667584940312e-03, 9.715161660389764e-03, -1.457311842632286e-02,\n",
+    "                        3.673094582185491e-03, -4.591302628615413e-03, 5.509696538546906e-03, KK, k0, k1, dSO, dSS, 1, EMgamma)\n",
+    "dHdpz = new_compute_dHdp3(m1, m2, eta, 2.129680018601393e+01, 0.000000000000000e+00, 0.000000000000000e+00,\n",
+    "                        0.000000000000000e+00, 2.335392212172933e-01, -4.235166724910499e-22,\n",
+    "                        4.857667584940312e-03, 9.715161660389764e-03, -1.457311842632286e-02,\n",
+    "                        3.673094582185491e-03, -4.591302628615413e-03, 5.509696538546906e-03, KK, k0, k1, dSO, dSS, 1, EMgamma)\n",
     "\n",
-    "dH2dx2 = compute_d2Hdx2(m1, m2, eta, 2.129681018601393e+01, 0.0, 0.0,\n",
-    "                        0.0, 2.335391115580442e-01, -4.235164736271502e-22,\n",
-    "                        S1[0], S1[1], S1[2],\n",
-    "                        S2[0], S2[1], S2[2], KK, k0, k1, dSO, dSS, 2, EMgamma)\n",
+    "print(\"dHdx = %.15e\" % (dHdx/eta))\n",
+    "print(\"dHdpy = %.15e\" % (dHdpy/eta))\n",
+    "print(\"dHdpz = %.15e\" % (dHdpz/eta))\n",
+    "print(\"r = %.15e\" % r[0])\n",
+    "print(\"ptheta = %.15e\" % psph[1])\n",
+    "print(\"pphi = %.15e\" % psph[2])\n",
+    "print(\"dHdr is %.15e\" % (dHdx - dHdpy*psph[2]/r[0]/r[0] + dHdpz*psph[1]/r[0]/r[0]))\n",
+    "print(\"dHdr term2 is %.15e\" % (dHdpy*psph[2]/r[0]/r[0]))\n",
+    "print(\"dHdr term3 is %.15e\" % (dHdpz*psph[1]/r[0]/r[0]))\n",
+    "print(\"d2Hdx2 = %.15e\" % (d2Hdx2/eta))\n",
     "\n",
-    "print(dH2dx2)\n",
-    "sys.exit(1) # Might as well exit here for now.\n",
-    "\n",
-    "#TylerK: Hard-code temporarily so that we can get to validation\n",
-    "dHdpphi = 0.1\n",
-    "d2Hdr2 = 0.2\n",
-    "d2Hdrdpphi = 0.3"
+    "sys.exit(1) # Might as well exit here for now."
    ]
   },
   {
@@ -1105,7 +1139,7 @@
    "source": [
     "<a id='dedr'></a>\n",
     "\n",
-    "## Stop 4.c: $\\frac{ \\partial E }{ \\partial r }$ \\[Back to [top](#toc)\\]\n",
+    "## Step 4.c: $\\frac{ \\partial E }{ \\partial r }$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{dedr}$$\n",
     "\n",
     "We seek to compute $\\frac{ \\partial H }{\\partial r}$, and [BCD2006](https://arxiv.org/abs/gr-qc/0508067) uses the convention $H \\equiv E$.  (see [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation (3.7)).  From [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation Equation (4.14) (noting that this equation applies in spherical coordinates when ${\\bf r}$ is directed along the ${\\bf e}_{0}$ axis),\n",
