--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-PPM.ipynb
@@ -148,7 +148,7 @@
     "args[2] = c*x + a*y + b*z\n",
     "if Use_Shock_Data: \n",
     "    for i in range(3): \n",
-    "        args[i] += max_noif(0,x)\n",
+    "        args[i] += max_noif(0,5*x)\n",
     "\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"ValenciavU\")\n",
     "for i in range(3): \n",
@@ -187,7 +187,7 @@
     "BU[2] = sp.exp(d*x+e*y)\n",
     "if Use_Shock_Data: \n",
     "    for i in range(3): \n",
-    "        BU[i] += max_noif(0,x)\n"
+    "        BU[i] += max_noif(0,5*x)\n"
    ]
   },
   {
@@ -579,51 +579,51 @@
     "    \n",
     "    printf(\"Checking results in the x-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
-    "        printf(\"vxr agrees to %.3e significant digits.\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
+    "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vyrN!=vyrC) {\n",
-    "        printf(\"vyr agrees to %.3e significant digits.\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
+    "        printf(\"vyr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzrN!=vzrC) {\n",
-    "        printf(\"vzr agrees to %.3e significant digits.\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
+    "        printf(\"vzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vxlN!=vxlC) {\n",
-    "        printf(\"vxl agrees to %.3e significant digits.\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
+    "        printf(\"vxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vylN!=vylC) {\n",
-    "        printf(\"vyl agrees to %.3e significant digits.\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
+    "        printf(\"vyl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzlN!=vzlC) {\n",
-    "        printf(\"vzl agrees to %.3e significant digits.\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
+    "        printf(\"vzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxrN!=BxrC) {\n",
-    "        printf(\"Bxr agrees to %.3e significant digits.\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
+    "        printf(\"Bxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(ByrN!=ByrC) {\n",
-    "        printf(\"Byr agrees to %.3e significant digits.\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
+    "        printf(\"Byr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzrN!=BzrC) {\n",
-    "        printf(\"Bzr agrees to %.3e significant digits.\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
+    "        printf(\"Bzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxlN!=BxlC) {\n",
-    "        printf(\"Bxl agrees to %.3e significant digits.\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
+    "        printf(\"Bxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BylN!=BylC) {\n",
-    "        printf(\"Byl agrees to %.3e significant digits.\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
+    "        printf(\"Byl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzlN!=BzlC) {\n",
-    "        printf(\"Bzl agrees to %.3e significant digits.\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
+    "        printf(\"Bzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if (all_agree) {printf(\"All quantities are bit-wise identical in this flux direction!\\n\");}\n",
@@ -662,51 +662,51 @@
     "    \n",
     "    printf(\"Checking results in the y-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
-    "        printf(\"vxr agrees to %.3e significant digits.\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
+    "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vyrN!=vyrC) {\n",
-    "        printf(\"vyr agrees to %.3e significant digits.\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
+    "        printf(\"vyr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzrN!=vzrC) {\n",
-    "        printf(\"vzr agrees to %.3e significant digits.\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
+    "        printf(\"vzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vxlN!=vxlC) {\n",
-    "        printf(\"vxl agrees to %.3e significant digits.\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
+    "        printf(\"vxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vylN!=vylC) {\n",
-    "        printf(\"vyl agrees to %.3e significant digits.\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
+    "        printf(\"vyl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzlN!=vzlC) {\n",
-    "        printf(\"vzl agrees to %.3e significant digits.\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
+    "        printf(\"vzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxrN!=BxrC) {\n",
-    "        printf(\"Bxr agrees to %.3e significant digits.\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
+    "        printf(\"Bxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(ByrN!=ByrC) {\n",
-    "        printf(\"Byr agrees to %.3e significant digits.\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
+    "        printf(\"Byr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzrN!=BzrC) {\n",
-    "        printf(\"Bzr agrees to %.3e significant digits.\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
+    "        printf(\"Bzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxlN!=BxlC) {\n",
-    "        printf(\"Bxl agrees to %.3e significant digits.\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
+    "        printf(\"Bxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BylN!=BylC) {\n",
-    "        printf(\"Byl agrees to %.3e significant digits.\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
+    "        printf(\"Byl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzlN!=BzlC) {\n",
-    "        printf(\"Bzl agrees to %.3e significant digits.\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
+    "        printf(\"Bzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if (all_agree) {printf(\"All quantities are bit-wise identical in this flux direction!\\n\");}\n",
@@ -745,51 +745,51 @@
     "    \n",
     "    printf(\"Checking results in the z-direction...\\n\");\n",
     "    if(vxrN!=vxrC) {\n",
-    "        printf(\"vxr agrees to %.3e significant digits.\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
+    "        printf(\"vxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxrN-vxrC)/(fabs(vxrN)+fabs(vxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vyrN!=vyrC) {\n",
-    "        printf(\"vyr agrees to %.3e significant digits.\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
+    "        printf(\"vyr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vyrN-vyrC)/(fabs(vyrN)+fabs(vyrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzrN!=vzrC) {\n",
-    "        printf(\"vzr agrees to %.3e significant digits.\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
+    "        printf(\"vzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzrN-vzrC)/(fabs(vzrN)+fabs(vzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vxlN!=vxlC) {\n",
-    "        printf(\"vxl agrees to %.3e significant digits.\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
+    "        printf(\"vxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vxlN-vxlC)/(fabs(vxlN)+fabs(vxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vylN!=vylC) {\n",
-    "        printf(\"vyl agrees to %.3e significant digits.\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
+    "        printf(\"vyl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vylN-vylC)/(fabs(vylN)+fabs(vylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(vzlN!=vzlC) {\n",
-    "        printf(\"vzl agrees to %.3e significant digits.\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
+    "        printf(\"vzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(vzlN-vzlC)/(fabs(vzlN)+fabs(vzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxrN!=BxrC) {\n",
-    "        printf(\"Bxr agrees to %.3e significant digits.\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
+    "        printf(\"Bxr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxrN-BxrC)/(fabs(BxrN)+fabs(BxrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(ByrN!=ByrC) {\n",
-    "        printf(\"Byr agrees to %.3e significant digits.\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
+    "        printf(\"Byr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(ByrN-ByrC)/(fabs(ByrN)+fabs(ByrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzrN!=BzrC) {\n",
-    "        printf(\"Bzr agrees to %.3e significant digits.\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
+    "        printf(\"Bzr agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzrN-BzrC)/(fabs(BzrN)+fabs(BzrC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BxlN!=BxlC) {\n",
-    "        printf(\"Bxl agrees to %.3e significant digits.\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
+    "        printf(\"Bxl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BxlN-BxlC)/(fabs(BxlN)+fabs(BxlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BylN!=BylC) {\n",
-    "        printf(\"Byl agrees to %.3e significant digits.\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
+    "        printf(\"Byl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BylN-BylC)/(fabs(BylN)+fabs(BylC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if(BzlN!=BzlC) {\n",
-    "        printf(\"Bzl agrees to %.3e significant digits.\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
+    "        printf(\"Bzl agrees to %.3e significant digits.\\n\",1-log10(2*fabs(BzlN-BzlC)/(fabs(BzlN)+fabs(BzlC))));\n",
     "        all_agree=0;\n",
     "    }\n",
     "    if (all_agree) {printf(\"All quantities are bit-wise identical in this flux direction!\\n\");}\n",
@@ -823,9 +823,9 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/PPM_unit_test.C -o Validation/PPM_unit_test -lm`...\n",
-      "Finished executing in 0.6143476963043213 seconds.\n",
+      "Finished executing in 0.6126537322998047 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 0.6242470741271973 seconds.\n",
+      "Finished in 0.6232380867004395 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
@@ -836,7 +836,7 @@
       "All quantities are bit-wise identical in this flux direction!\n",
       "Checking results in the z-direction...\n",
       "All quantities are bit-wise identical in this flux direction!\n",
-      "Finished in 0.1331791877746582 seconds.\n",
+      "Finished in 0.11988353729248047 seconds.\n",
       "\n",
       "\n"
      ]
