--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -158,13 +158,56 @@
     "import BSSN.BSSN_RHSs as rhs\n",
     "import BSSN.BSSN_gauge_RHSs as gaugerhs\n",
     "\n",
-    "def BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\",\"..\"),WhichPart = \"BSSN_RHSs\",ThornName = \"Baikal\",FD_order = 4,\n",
-    "                              enable_stress_energy_source_terms = True,\n",
-    "                              LapseCondition  = \"OnePlusLog\", # Set the standard 1+log lapse condition\n",
-    "                              # Set the standard, second-order advecting-shift, Gamma-driving shift condition:\n",
-    "                              ShiftCondition  = \"GammaDriving2ndOrder_NoCovariant\",\n",
-    "                              # Default Kreiss-Oliger dissipation strength\n",
-    "                              default_KO_strength = 0.1):\n",
+    "def BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\",\"..\"),\n",
+    "       params=\"WhichPart=BSSN_RHSs,ThornName=Baikal,FD_order=4,enable_stress_energy_source_terms=True\"):\n",
+    "    # Set default parameters\n",
+    "    WhichPart = \"BSSN_RHSs\"\n",
+    "    ThornName = \"Baikal\"\n",
+    "    FD_order = 4\n",
+    "    enable_stress_energy_source_terms = True\n",
+    "    LapseCondition  = \"OnePlusLog\" # Set the standard 1+log lapse condition\n",
+    "    # Set the standard, second-order advecting-shift, Gamma-driving shift condition:\n",
+    "    ShiftCondition  = \"GammaDriving2ndOrder_NoCovariant\"\n",
+    "    # Default Kreiss-Oliger dissipation strength\n",
+    "    default_KO_strength = 0.1\n",
+    "\n",
+    "    import re\n",
+    "    if params != \"\":\n",
+    "    params2 = re.sub(\"^,\",\"\",params)\n",
+    "    params = params2.strip()\n",
+    "    splitstring = re.split(\"=|,\", params)\n",
+    "\n",
+    "    if len(splitstring) % 2 != 0:\n",
+    "        print(\"outputC: Invalid params string: \"+params)\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    parnm = []\n",
+    "    value = []\n",
+    "    for i in range(int(len(splitstring)/2)):\n",
+    "        parnm.append(splitstring[2*i])\n",
+    "        value.append(splitstring[2*i+1])\n",
+    "\n",
+    "    for i in range(len(parnm)):\n",
+    "        if parnm[i] == \"WhichPart\":\n",
+    "            WhichPart = value[i]\n",
+    "        elif parnm[i] == \"ThornName\":\n",
+    "            ThornName = value[i]\n",
+    "        elif parnm[i] == \"FD_order\":\n",
+    "            FD_order = int(value[i])\n",
+    "        elif parnm[i] == \"enable_stress_energy_source_terms\":\n",
+    "            enable_stress_energy_source_terms = False\n",
+    "            if value[i] == \"True\":\n",
+    "                enable_stress_energy_source_terms = True\n",
+    "        elif parnm[i] == \"LapseCondition\":\n",
+    "            LapseCondition = value[i]\n",
+    "        elif parnm[i] == \"ShiftCondition\":\n",
+    "            ShiftCondition = value[i]\n",
+    "        elif parnm[i] == \"default_KO_strength\":\n",
+    "            default_KO_strength = float(value[i])\n",
+    "        else:\n",
+    "            print(\"BaikalETK Error: Could not parse input param: \"+parnm[i])\n",
+    "            sys.exit(1)\n",
+    "\n",
     "    # Create directory for BaikalETK thorn & subdirectories in case they don't exist.\n",
     "    outrootdir = ThornName\n",
     "    cmd.mkdir(os.path.join(outrootdir))\n",
@@ -635,7 +678,46 @@
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
     "import in_progress.BaikalETK.BaikalETK_validate as BETK\n",
-    "BETK.BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\"),WhichPart = \"BSSN_RHSs\",ThornName = \"Baikal\",FD_order = 4,enable_stress_energy_source_terms = True)\n",
+    "BETK.BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\"),\n",
+    "           params=\"WhichPart=BSSN_RHSs,ThornName=Baikal,FD_order=4,enable_stress_energy_source_terms=True\")\n",
+    "\n",
+    "paramslist = []\n",
+    "FD_orders = [2,4,6,8]\n",
+    "for FD_order in FD_orders:\n",
+    "    enable_stress_energy_list = [True,False]\n",
+    "    if FD_order == 2:\n",
+    "        enable_stress_energy_list = [True]\n",
+    "    elif FD_order >= 6:\n",
+    "        enable_stress_energy_list = [False]\n",
+    "    for enable_stress_energy in enable_stress_energy_list:\n",
+    "        ThornName = \"Baikal\"\n",
+    "        if enable_stress_energy == False:\n",
+    "            ThornName = \"BaikalVacuum\"\n",
+    "        paramslist.append(\"WhichPart=BSSN_RHSs,ThornName=\"+ThornName+\",FD_order=\"+str(FD_order)+\"enable_stress_energy_source_terms=\"+str(enable_stress_energy))\n",
+    "        \n",
+    "try:\n",
+    "    if os.name == 'nt':\n",
+    "        # It's a mess to get working in Windows, so we don't bother. :/\n",
+    "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
+    "        raise Exception(\"Parallel codegen currently not available in Windows\")\n",
+    "    # Step 3.d.ii: Import the multiprocessing module.\n",
+    "    import multiprocessing\n",
+    "\n",
+    "    # Step 3.d.iii: Define master function for parallelization.\n",
+    "    #           Note that lambdifying this doesn't work in Python 3\n",
+    "    def master_func(i):\n",
+    "        import in_progress.BaikalETK.BaikalETK_validate as BETK\n",
+    "        BETK.BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\"),paramslist[i])\n",
+    "\n",
+    "    # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
+    "    #           otherwise fallback to serial evaluation:\n",
+    "    pool = multiprocessing.Pool()\n",
+    "    pool.map(master_func,range(len(paramslist)))\n",
+    "except:\n",
+    "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
+    "    #       This will happen on Android and Windows systems\n",
+    "    for func in funcs:\n",
+    "        func()\n",
     "\n",
     "import sys\n",
     "sys.exit(1)\n",
