--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -601,9 +601,7 @@
    "source": [
     "%%writefile -a $BaikalETKdir/BaikalETK_validate.py\n",
     "\n",
-    "    def gammadet__generate_symbolic_expressions_and_C_code():\n",
-    "        ######################################\n",
-    "        # START: GENERATE SYMBOLIC EXPRESSIONS\n",
+    "    def enforce_detgammabar_eq_detgammahat__generate_symbolic_expressions_and_C_code():\n",
     "        ######################################\n",
     "        # START: GENERATE SYMBOLIC EXPRESSIONS\n",
     "        # Store original finite-differencing order:\n",
@@ -679,7 +677,13 @@
     "%%writefile -a $BaikalETKdir/BaikalETK_validate.py\n",
     "\n",
     "    if WhichPart==\"BSSN_RHSs\":\n",
-    "        BSSN_RHSs_Ricci__generate_Ccode(\"BSSN_RHSs\", BSSN_RHSs_Ricci__generate_symbolic_expressions())"
+    "        BSSN_RHSs_Ricci__generate_Ccode(\"BSSN_RHSs\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
+    "    elif WhichPart==\"Ricci\":\n",
+    "        BSSN_RHSs_Ricci__generate_Ccode(\"Ricci\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
+    "    elif WhichPart==\"BSSN_constraints\":\n",
+    "        BSSN_constraints__generate_symbolic_expressions_and_C_code()\n",
+    "    elif WhichPart==\"detgammabar_constraint\":\n",
+    "        enforce_detgammabar_eq_detgammahat__generate_symbolic_expressions_and_C_code()"
    ]
   },
   {
@@ -738,9 +742,10 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "# import in_progress.BaikalETK.BaikalETK_validate as BETK\n",
-    "# BETK.BaikalETK_codegen_onepart(NRPyDir=os.path.join(\"..\"),\n",
-    "#            params=\"WhichPart=BSSN_RHSs,ThornName=Baikal,FD_order=4,enable_stress_energy_source_terms=True\")\n",
+    "# TODO: Make this faster by \n",
+    "#     1) Generating Ricci & gammadet code once for each FD_order and copying to Baikal*\n",
+    "#        (these do *not* depend on stress-energy tensor; enable_stress_energy is set\n",
+    "#         so that output is sent to both thorns)\n",
     "\n",
     "paramslist = []\n",
     "FD_orders = [2,4,6,8]\n",
@@ -754,8 +759,9 @@
     "        ThornName = \"Baikal\"\n",
     "        if enable_stress_energy == False:\n",
     "            ThornName = \"BaikalVacuum\"\n",
-    "        paramslist.append(\"WhichPart=BSSN_RHSs,ThornName=\"+ThornName+\",FD_order=\"+str(FD_order)+\",enable_stress_energy_source_terms=\"+str(enable_stress_energy))\n",
-    "        \n",
+    "        for WhichPart in [\"BSSN_RHSs\",\"Ricci\",\"BSSN_constraints\",\"detgammabar_constraint\"]:\n",
+    "            paramslist.append(\"WhichPart=\"+WhichPart+\",ThornName=\"+ThornName+\",FD_order=\"+str(FD_order)+\",enable_stress_energy_source_terms=\"+str(enable_stress_energy))\n",
+    "\n",
     "try:\n",
     "    if os.name == 'nt':\n",
     "        # It's a mess to get working in Windows, so we don't bother. :/\n",
@@ -778,28 +784,7 @@
     "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
     "    #       This will happen on Android and Windows systems\n",
     "    for func in funcs:\n",
-    "        func()\n",
-    "\n",
-    "import sys\n",
-    "sys.exit(1)\n",
-    "# # TODO: Make this faster by \n",
-    "# #     1) Running codegen in parallel. \n",
-    "# #     2) Generating Ricci & gammadet code once for each FD_order and copying to Baikal*\n",
-    "# #        (these do *not* depend on stress-energy tensor; enable_stress_energy is set\n",
-    "# #         so that output is sent to both thorns)\n",
-    "# FD_orders = [2,4,6,8]\n",
-    "\n",
-    "# for FD_order in FD_orders:\n",
-    "#     enable_stress_energy_list = [True,False]\n",
-    "#     if FD_order == 2:\n",
-    "#         enable_stress_energy_list = [True]\n",
-    "#     elif FD_order >= 6:\n",
-    "#         enable_stress_energy_list = [False]\n",
-    "#     for enable_stress_energy in enable_stress_energy_list:\n",
-    "#         BSSN_RHSs_Ricci__generate_symbolic_expressions_and_C_code(\"Ricci\",    FD_order, enable_stress_energy)\n",
-    "#         BSSN_RHSs_Ricci__generate_symbolic_expressions_and_C_code(\"BSSN_RHSs\",FD_order, enable_stress_energy)\n",
-    "#         BSSN_constraints__generate_symbolic_expressions_and_C_code(           FD_order, enable_stress_energy)\n",
-    "#         gammadet__generate_symbolic_expressions_and_C_code(                   FD_order, enable_stress_energy)"
+    "        func()"
    ]
   },
   {
