in_progress/Tutorial-BaikalETK-new.ipynb: try storing NRPy+ parameters and gridfunctions

--- a/in_progress/Tutorial-BaikalETK-new.ipynb
+++ b/in_progress/Tutorial-BaikalETK-new.ipynb
@@ -500,7 +500,9 @@
     "            end = time.time()\n",
     "            print(\"Finished Ricci C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")\n",
     "        else:\n",
-    "            print(\"Error: unexpected argument, \"+str(which_expressions)+\" to BSSN_RHSs_Ricci__generate_Ccode()\")"
+    "            print(\"Error: unexpected argument, \"+str(which_expressions)+\" to BSSN_RHSs_Ricci__generate_Ccode()\")\n",
+    "        # return all NRPy+ environment variables so NRPy+ environment from within this subprocess can be easily restored\n",
+    "        return [gri.glb_gridfcs_list, par.glb_params_list, glb_Cparams_list]"
    ]
   },
   {
@@ -571,7 +573,9 @@
     "           [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"], \"\", Ham_mom_string))\n",
     "        end = time.time()\n",
-    "        print(\"Finished Hamiltonian & momentum constraint C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")"
+    "        print(\"Finished Hamiltonian & momentum constraint C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")\n",
+    "        # return all NRPy+ environment variables so NRPy+ environment from within this subprocess can be easily restored\n",
+    "        return [gri.glb_gridfcs_list, par.glb_params_list, glb_Cparams_list]"
    ]
   },
   {
@@ -650,7 +654,9 @@
     "                                     \"#include \\\"rfm_files/rfm_struct__read1.h\\\"\"],\"\",\n",
     "                                     \"#include \\\"rfm_files/rfm_struct__read0.h\\\"\\n\"+enforce_gammadet_string))\n",
     "        end = time.time()\n",
-    "        print(\"Finished gamma constraint C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")"
+    "        print(\"Finished gamma constraint C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")\n",
+    "        # return all NRPy+ environment variables so NRPy+ environment from within this subprocess can be easily restored\n",
+    "        return [gri.glb_gridfcs_list, par.glb_params_list, glb_Cparams_list]"
    ]
   },
   {
@@ -680,16 +686,17 @@
     "%%writefile -a $BaikalETKdir/BaikalETK_validate.py\n",
     "\n",
     "    if WhichPart==\"BSSN_RHSs\":\n",
-    "        BSSN_RHSs_Ricci__generate_Ccode(\"BSSN_RHSs\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
+    "        retval = BSSN_RHSs_Ricci__generate_Ccode(\"BSSN_RHSs\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
     "    elif WhichPart==\"Ricci\":\n",
-    "        BSSN_RHSs_Ricci__generate_Ccode(\"Ricci\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
+    "        retval = BSSN_RHSs_Ricci__generate_Ccode(\"Ricci\", BSSN_RHSs_Ricci__generate_symbolic_expressions())\n",
     "    elif WhichPart==\"BSSN_constraints\":\n",
-    "        BSSN_constraints__generate_symbolic_expressions_and_C_code()\n",
+    "        retval = BSSN_constraints__generate_symbolic_expressions_and_C_code()\n",
     "    elif WhichPart==\"detgammabar_constraint\":\n",
-    "        enforce_detgammabar_eq_detgammahat__generate_symbolic_expressions_and_C_code()\n",
+    "        retval = enforce_detgammabar_eq_detgammahat__generate_symbolic_expressions_and_C_code()\n",
     "    else:\n",
     "        print(\"Error: WhichPart = \"+WhichPart+\" is not recognized.\")\n",
-    "        sys.exit(1)"
+    "        sys.exit(1)\n",
+    "    return retval"
    ]
   },
   {
@@ -781,17 +788,60 @@
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
+      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished gamma constraint C codegen (FD_order=2) in 0.15367627143859863 seconds.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
       "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Generating optimized C code (FD_order=2) for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen (FD_order=4) in 0.12162399291992188 seconds.\n",
-      "Finished gamma constraint C codegen (FD_order=2) in 0.12983226776123047 seconds.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.14505791664123535 seconds.\n",
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 2.714648485183716 seconds.\n",
+      "Finished BSSN symbolic expressions in 2.5638842582702637 seconds.\n",
       "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
-      "Finished BSSN symbolic expressions in 2.80078125 seconds.\n",
-      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n"
+      "Finished BSSN symbolic expressions in 3.2346432209014893 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 4.474532604217529 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=4) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 4.678578615188599 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=2) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 5.111479043960571 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=4,Tmunu=True) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 4.96174430847168 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=2,Tmunu=True) in Cartesian coordinates.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Ricci C codegen (FD_order=2) in 16.75400972366333 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished BSSN_RHS C codegen (FD_order=2,Tmunu=True) in 18.775623321533203 seconds.\n",
+      "Generating optimized C code (FD_order=4) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=4) in 0.13234663009643555 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished Ricci C codegen (FD_order=4) in 19.72056770324707 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished Ricci C codegen (FD_order=4) in 21.215269804000854 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished BSSN symbolic expressions in 2.6704728603363037 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=6,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN symbolic expressions in 3.078258514404297 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=6) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=False) in 25.625695943832397 seconds.\n",
+      "Generating optimized C code (FD_order=6) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=6) in 0.14782142639160156 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.8656747341156006 seconds.\n",
+      "Generating C code for BSSN RHSs (FD_order=8,Tmunu=False) in Cartesian coordinates.\n",
+      "Finished BSSN_RHS C codegen (FD_order=4,Tmunu=True) in 28.025161027908325 seconds.\n",
+      "Generating symbolic expressions for BSSN RHSs...\n",
+      "Finished BSSN symbolic expressions in 2.6521639823913574 seconds.\n",
+      "Generating C code for Ricci tensor (FD_order=8) in Cartesian coordinates.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=2,Tmunu=True) in 51.24623346328735 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=True) in 52.72059082984924 seconds.\n",
+      "Generating optimized C code (FD_order=8) for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Finished gamma constraint C codegen (FD_order=8) in 0.11683845520019531 seconds.\n",
+      "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=4,Tmunu=False) in 49.228679895401 seconds.\n",
+      "Finished Ricci C codegen (FD_order=6) in 45.900991916656494 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=6,Tmunu=False) in 49.24586224555969 seconds.\n",
+      "Finished Hamiltonian & momentum constraint C codegen (FD_order=8,Tmunu=False) in 36.99554777145386 seconds.\n"
      ]
     }
    ],
@@ -800,6 +850,8 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
+    "NRPyEnvVars = []\n",
+    "    \n",
     "try:\n",
     "    if os.name == 'nt':\n",
     "        # It's a mess to get working in Windows, so we don't bother. :/\n",
@@ -812,7 +864,7 @@
     "    #           Note that lambdifying this doesn't work in Python 3\n",
     "    def master_func(i):\n",
     "        import in_progress.BaikalETK.BaikalETK_validate as BETK\n",
-    "        BETK.BaikalETK_kernel_codegen_onepart(NRPyDir=os.path.join(\"..\"),params=paramslist[i])\n",
+    "        NRPyEnvVars.append(BETK.BaikalETK_kernel_codegen_onepart(NRPyDir=os.path.join(\"..\"),params=paramslist[i]))\n",
     "\n",
     "    # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
     "    #           otherwise fallback to serial evaluation:\n",
@@ -821,8 +873,11 @@
     "except:\n",
     "    # Steps 3.d.ii-iv, alternate: As fallback, evaluate functions in serial.\n",
     "    #       This will happen on Android and Windows systems\n",
-    "    for func in funcs:\n",
-    "        func()"
+    "    import in_progress.BaikalETK.BaikalETK_validate as BETK\n",
+    "    for param in paramslist:\n",
+    "        NRPyEnvVars.append(BETK.BaikalETK_kernel_codegen_onepart(NRPyDir=os.path.join(\"..\"),params=param))\n",
+    "\n",
+    "print(NRPyEnvVars)"
    ]
   },
   {
